# ModelingMarathonPerformance

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/marathon_model/: logic.py  main.py  models.py
backend/src/marathon_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_logic.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  index.css
